                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 17-03-2005 fixed: "The ..." items were not sorted correctly if the following characters were T,h,e or space.
  - 17-03-2005 removed: list, listex and thumbcontrol can not be focused anymore if they have no items -> Problems in Video OSD with empty lists
  - 17-03-2005 added: a few new api's to HttpApi
  - 17-03-2005 fixed: cdda ripper doesn't use cddb info for ripping
  - 16-03-2005 fixed: crash when switching skin if kai is connected
  - 16-03-2005 fixed: [ 1072255 ][ 1157300 ] Spindown does not work for wmv9 video
  - 16-03-2005 fixed: videoplayer.year showed 0 if no movie (or no movie info) was available.
  - 16-03-2005 fixed: musicplayer.title sometimes showed file extension if Hide File Extensions was on.
  - 16-03-2005 fixed: Animated Gifs only show the first frame
  - 16-03-2005 fixed: GUIWindowManager now correctly dispatches messages to modeless windows
  - 16-03-2005 added: mute support for the media center extender remote
  - 15-03-2005 fixed: my music nav window showing false items due to allmusic.com lookups
  - 15-03-2005 changed: removed musicdatabase from precompiled headers, removed more unnecessary includes
  - 15-03-2005 fixed: all windows, last control was not focused
  - 15-03-2005 fixed: memory leak in rgbrenderer.
  - 15-03-2005 fixed: switching from PM3 to another skin, the settings window is misplaced
  - 15-03-2005 changed: list, listex and thumbcontrol can not be focused anymore if they have no items
  - 15-03-2005 fixed: actions where sent to focused controls if they are invisible
  - 15-03-2005 fixed: video/music playlist, no control is focused when all items from a playlist are removed