@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 17-03-2005 fixed: Song info is displayed upon song change when in a visualisation
   - 17-03-2005 fixed: "The ..." items were not sorted correctly if the following characters were T,h,e or space.
   - 17-03-2005 removed: list, listex and thumbcontrol can not be focused anymore if they have no items -> Problems in Video OSD with empty lists
   - 17-03-2005 added: a few new api's to HttpApi
